--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/nbproject/private/private.properties
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\abraham.acosta\\AppData\\Roaming\\NetBeans\\7.4\\config\\GlassFishEE6\\Properties\\gfv31561087271.properties
+deploy.ant.properties.file=C:\\Users\\edwin.alvarenga\\AppData\\Roaming\\NetBeans\\7.4\\config\\GlassFishEE6\\Properties\\gfv3511763681.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/abraham.acosta/AppData/Roaming/NetBeans/7.4/config/GF_4.0/domain1
-j2ee.server.home=C:/Program Files (x86)/glassfish-4.0/glassfish
-j2ee.server.instance=[C:\\Program Files (x86)\\glassfish-4.0\\glassfish;C:\\Program Files (x86)\\glassfish-4.0\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files (x86)/glassfish-4.0
+j2ee.server.domain=C:/OracleGlassfish3/glassfish/domains/domain1
+j2ee.server.home=C:/OracleGlassfish3/glassfish
+j2ee.server.instance=[C:\\OracleGlassfish3\\glassfish;C:\\OracleGlassfish3\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/OracleGlassfish3
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\abraham.acosta\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\edwin.alvarenga\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
