--- a/SistemaLiquidaciones/SistemaLiquidacionesEJB/nbproject/private/private.properties
+++ b/SistemaLiquidaciones/SistemaLiquidacionesEJB/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\edwin.alvarenga\\AppData\\Roaming\\NetBeans\\7.4\\config\\GlassFishEE6\\Properties\\gfv3511763681.properties
+deploy.ant.properties.file=C:\\Users\\Administrador\\AppData\\Roaming\\NetBeans\\7.3.1\\config\\GlassFishEE6\\Properties\\gfv3-1593278554.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/OracleGlassfish3/glassfish/domains/domain1
-j2ee.server.home=C:/OracleGlassfish3/glassfish
-j2ee.server.instance=[C:\\OracleGlassfish3\\glassfish;C:\\OracleGlassfish3\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/OracleGlassfish3
+j2ee.server.domain=C:/Oglassfish3/glassfish/domains/domain1
+j2ee.server.home=C:/Oglassfish3/glassfish
+j2ee.server.instance=[C:\\Oglassfish3\\glassfish;C:\\Oglassfish3\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Oglassfish3
 javac.debug=true
 javadoc.preview=true
 netbeans.user=C:\\Users\\edwin.alvarenga\\AppData\\Roaming\\NetBeans\\7.4
