--- a/SistemaLiquidaciones/nbproject/private/private.properties
+++ b/SistemaLiquidaciones/nbproject/private/private.properties
@@ -1,12 +1,12 @@
-deploy.ant.properties.file=C:\\Users\\edwin.alvarenga\\AppData\\Roaming\\NetBeans\\7.4\\config\\GlassFishEE6\\Properties\\gfv3511763681.properties
-j2ee.appclient.tool.jvmoptions=-Djava.endorsed.dirs="C:\\OracleGlassfish3\\glassfish\\lib\\endorsed";"C:\\OracleGlassfish3\\glassfish\\modules\\endorsed" -javaagent:"C:\\OracleGlassfish3\\glassfish\\lib\\gf-client.jar"=mode=acscript,arg=-configxml,arg="C:\\OracleGlassfish3\\glassfish\\domains\\domain1\\config\\sun-acc.xml",client=jar=
+deploy.ant.properties.file=C:\\Users\\abraham.acosta\\AppData\\Roaming\\NetBeans\\7.4\\config\\GlassFishEE6\\Properties\\gfv3519125198.properties
+j2ee.appclient.tool.jvmoptions=-Djava.endorsed.dirs="C:\\DevTools\\glassfish4\\glassfish\\lib\\endorsed";"C:\\DevTools\\glassfish4\\glassfish\\modules\\endorsed" -javaagent:"C:\\DevTools\\glassfish4\\glassfish\\lib\\gf-client.jar"=mode=acscript,arg=-configxml,arg="C:\\DevTools\\glassfish4\\glassfish\\domains\\domain1\\config\\glassfish-acc.xml",client=jar=
 j2ee.appclient.tool.mainclass=org.glassfish.appclient.client.AppClientFacade
 j2ee.appclient.tool.runtime=
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/OracleGlassfish3/glassfish/domains/domain1
-j2ee.server.home=C:/OracleGlassfish3/glassfish
-j2ee.server.instance=[C:\\OracleGlassfish3\\glassfish;C:\\OracleGlassfish3\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/OracleGlassfish3
-netbeans.user=C:\\Users\\edwin.alvarenga\\AppData\\Roaming\\NetBeans\\7.4
+j2ee.server.domain=C:/DevTools/glassfish4/glassfish/domains/domain1
+j2ee.server.home=C:/DevTools/glassfish4/glassfish
+j2ee.server.instance=[C:\\DevTools\\glassfish4\\glassfish;C:\\DevTools\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/DevTools/glassfish4
+netbeans.user=C:\\Users\\abraham.acosta\\AppData\\Roaming\\NetBeans\\7.4
 selected.browser=default
-wa.copy.client.jar.from=C:\\OracleGlassfish3\\glassfish\\domains\\domain1\\generated\\xml
+wa.copy.client.jar.from=C:\\DevTools\\glassfish4\\glassfish\\domains\\domain1\\generated\\xml
