--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/web.xml
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/web.xml
@@ -250,10 +250,16 @@
         <local>sv.com.diserv.liquidaciones.ejb.ManejadorUsuarioBeanLocal</local>
         <mapped-name>ejb/ManejadorUsuarioBean</mapped-name>
     </ejb-local-ref>    
-	 <ejb-local-ref>
+    <ejb-local-ref>
         <ejb-ref-name>ejb/BodegasBean</ejb-ref-name>
         <ejb-ref-type>Session</ejb-ref-type>
         <local>sv.com.diserv.liquidaciones.ejb.BodegasBeanLocal</local>
         <mapped-name>ejb/BodegasBean</mapped-name>
+    </ejb-local-ref>
+    <ejb-local-ref>
+        <ejb-ref-name>ejb/SucursalesBean</ejb-ref-name>
+        <ejb-ref-type>Session</ejb-ref-type>
+        <local>sv.com.diserv.liquidaciones.ejb.SucursalesBeanLocal</local>
+        <mapped-name>ejb/SucursalesBean</mapped-name>
     </ejb-local-ref>
 </web-app>
