mantenimiento de entidad persona By SGGG

--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/web.xml
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/web.xml
@@ -268,4 +268,10 @@
         <local>sv.com.diserv.liquidaciones.ejb.LineaArticuloBeanLocal</local>
         <mapped-name>ejb/LineaArticuloBean</mapped-name>
     </ejb-local-ref>
+     <ejb-local-ref>
+        <ejb-ref-name>ejb/PersonasBean</ejb-ref-name>
+        <ejb-ref-type>Session</ejb-ref-type>
+        <local>sv.com.diserv.liquidaciones.ejb.PersonasBeanLocal</local>
+        <mapped-name>ejb/PersonasBean</mapped-name>
+    </ejb-local-ref>
 </web-app>
