Actualizacion mantenimiento de entidad persona By SGGG

--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/web.xml
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/web.xml
@@ -304,4 +304,10 @@
         <mapped-name>ejb/ArticulosBean</mapped-name>
     </ejb-local-ref>
     
+    <ejb-local-ref>
+        <ejb-ref-name>ejb/BodegaVendedorBean</ejb-ref-name>
+        <ejb-ref-type>Session</ejb-ref-type>
+        <local>sv.com.diserv.liquidaciones.ejb.BodegaVendedorBeanLocal</local>
+        <mapped-name>ejb/BodegaVendedorBean</mapped-name>
+    </ejb-local-ref>
 </web-app>
