--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/web.xml
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/web.xml
@@ -310,4 +310,12 @@
         <local>sv.com.diserv.liquidaciones.ejb.BodegaVendedorBeanLocal</local>
         <mapped-name>ejb/BodegaVendedorBean</mapped-name>
     </ejb-local-ref>
+    
+     <ejb-local-ref>
+        <ejb-ref-name>ejb/TipoArticuloBean</ejb-ref-name>
+        <ejb-ref-type>Session</ejb-ref-type>
+        <local>sv.com.diserv.liquidaciones.ejb.TipoArticuloBeanLocal</local>
+        <mapped-name>ejb/TipoArticuloBean</mapped-name>
+    </ejb-local-ref>
+    
 </web-app>
