--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/web.xml
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/web.xml
@@ -339,4 +339,11 @@
         <mapped-name>ejb/LotesExistenciaBean</mapped-name>
     </ejb-local-ref>
     
+    <ejb-local-ref>
+        <ejb-ref-name>ejb/ExistenciasBean</ejb-ref-name>
+        <ejb-ref-type>Session</ejb-ref-type>
+        <local>sv.com.diserv.liquidaciones.ejb.ExistenciasBeanLocal</local>
+        <mapped-name>ejb/ExistenciasBean</mapped-name>
+    </ejb-local-ref>
+    
 </web-app>
