--- a/SistemaLiquidaciones/SistemaLiquidacionesEJB/nbproject/private/private.properties
+++ b/SistemaLiquidaciones/SistemaLiquidacionesEJB/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\abraham.acosta\\AppData\\Roaming\\NetBeans\\7.4\\config\\GlassFishEE6\\Properties\\gfv3519125198.properties
+deploy.ant.properties.file=/home/trompudo/.netbeans/8.0.2/config/GlassFishEE6/Properties/gfv355981048.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/DevTools/glassfish4/glassfish/domains/domain1
-j2ee.server.home=C:/DevTools/glassfish4/glassfish
-j2ee.server.instance=[C:\\DevTools\\glassfish4\\glassfish;C:\\DevTools\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/DevTools/glassfish4
+j2ee.server.domain=/home/trompudo/glassfish-4.1/glassfish/domains/domain1
+j2ee.server.home=/home/trompudo/glassfish-4.1/glassfish
+j2ee.server.instance=[/home/trompudo/glassfish-4.1/glassfish:/home/trompudo/glassfish-4.1/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=/home/trompudo/glassfish-4.1
 javac.debug=true
 javadoc.preview=true
-netbeans.user=C:\\Users\\abraham.acosta\\AppData\\Roaming\\NetBeans\\7.4
+netbeans.user=/home/trompudo/.netbeans/8.0.2
